[package]
name = "esa-nippou"
version = "1.1.1"
authors = ["mizukmb <mizukmb6@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
reqwest = "0.9"
chrono = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8.11"
serde_derive = "1.0"
rpassword = "4.0.1"
dirs = "2.0.2"
failure = "0.1.5"
mockito = "0.21.0"
